@@ -176,6 +176,9 @@ please contact them here.
 #^footer23_text
 Dquery - A read-only SQL interface
 
+#^footer24_text
+d-preview - Preview your data
+
 #^feedback_title_text
 d-portal.org Feedback
 
