@@ -26,7 +26,7 @@
 	<tr>
 		<td class="logo">
 			<a href="{tongue_root}" title="{mainback_tip_text}">
-				<img src="{_root}ctrack/art/original/dp_logo.60.png" alt="{dportal_logo_alt_text}" width="150" height="60"/>{status}
+				<img src="{_root}ctrack/art/original/dp_logo.60.png" alt="{dportal_logo_alt_text}" width="150" height="60"/>
 			</a>
 		</td>
 		<td class="dplinks"><a href="{tongue_root}about.html" class="top install">{about_link_text}</a></td>
@@ -44,8 +44,6 @@
 <div class="footer_link">
 	<div class="footer_motto"><a href="http://d-portal.org/">{footer6_text}</a> {footer7_text}</div>
 	<p>{footer8_text}</p>
-	<p class="beta">{footer9_text}</p>
-	<p>{footer21_text} <b><a href="https://www.iatiregistry.org/publisher/">{footer22_text}</a></b></p>
 	<p>{footer10_text} <b><a href="mailto:support@iatistandard.org?subject=Regarding%20d-portal.org">{footer11_text}</a></b></p>
 </div><div class="footer_link list">
 	<div class="footer_header">{footer12_text}</div>
@@ -55,6 +53,7 @@
 		<li><a href="http://d-portal.org/ctrack.html#view=generator">{footer15_text}</a></li>
 		<li><a href="http://d-portal.org/dquery">{footer23_text}</a></li>
 		<li><a href="https://xriss.github.io/D-Portal-Logs/">{footer20_text}</a></li>
+		<li><a href="http://d-preview.codeforiati.org">{footer24_text}</a></li>
 	</ul>
 	<div class="footer_header">{footer16_text}</div>
 	<ul>
