@@ -194,6 +194,9 @@ Github的反馈论坛
 #^footer23_text
 Dquery-只读SQL接口
 
+#^footer24_text
+d-preview - 预览您的数据
+
 #^feedback_title_text
 d-portal.org反馈
 
