@@ -191,7 +191,10 @@ Si vous avez des questions concernant les données elles-mêmes, qui appartienne
 veuillez les contacter ici.
 
 #^footer23_text
-Dquery - Une interface SQL en lecture seule
+Dquery - Interface SQL en lecture seule
+
+#^footer24_text
+d-preview - Prévisualisez vos données
 
 #^feedback_title_text
 d-portal.org réaction
