@@ -193,6 +193,9 @@ Github प्रतिक्रिया फोरम
 #^footer23_text
 Dquery - केवल SQL इंटरफ़ेस पढ़ा जाता है
 
+#^footer24_text
+d-preview - अपने डेटा का पूर्वावलोकन करें
+
 #^feedback_title_text
 d-portal.org प्रतिक्रिया
 
