@@ -168,7 +168,7 @@ support@iatistandard.org
 Dash - 出版社の統計を
 
 #^footer15_text
-Generator - あなたのウェブサイトのためのウィジェット
+Generator - ウェブサイトのウィジェット
 
 #^footer16_text
 情報
@@ -192,7 +192,10 @@ Githubのフィードバックフォーラム
 ここに連絡してください。
 
 #^footer23_text
-Dquery-読み取り専用SQLインターフェース
+Dquery-SQLインターフェース
+
+#^footer24_text
+d-preview - データをプレビューする
 
 #^feedback_title_text
 d-portal.org フィードバック
