@@ -194,6 +194,9 @@ por favor contáctalos aquí.
 #^footer23_text
 Dquery: una interfaz SQL de solo lectura
 
+#^footer24_text
+d-preview - Vista previa de sus datos
+
 #^feedback_title_text
 d-portal.org Feedback
 
