@@ -1,3 +1,9 @@
+Static site (2024-03-13 shi)
+==============================
+Update about page header and footer
+Update all translation pages 
+
+
 Static site (2024-01-23 shi)
 ==============================
 Update dquery examples
